# rpgmtranslate

./: .gitignore  .prettierrc  404.html  README-ru.md  README.md  eslint.config.ts  generate-updater-info.js  generate-updater-info.ts  index.html  input.css  lingui.config.ts  package.json  parse-html-i18n.ts  sitemap.xml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
batch-processing/: index.html
docs/: mkdocs.yml
docs/docs/: batch-processing.md  build.md  index.md  search.md  text-editing.md
docs/docs/en/: batch-processing.md  build.md  index.md  purge.md  read.md  search.md  settings.md  text-editing.md
docs/docs/ru/: batch-processing.md  build.md  index.md  purge.md  read.md  search.md  settings.md  text-editing.md
en/: index.html
en/batch-processing/: index.html
en/purge/: index.html
en/read/: index.html
en/search/: index.html
en/settings/: index.html
en/text-editing/: index.html
purge/: index.html
read/: index.html
ru/: index.html
ru/batch-processing/: index.html
ru/purge/: index.html
ru/read/: index.html
ru/search/: index.html
ru/settings/: index.html
ru/text-editing/: index.html
search/: index.html  search_index.json
settings/: index.html
src/: about.html  about.ts  aboutwindow.html  aboutwindow.ts  compile.html  compile.ts  main.html  main.ts  mainwindow.html  mainwindow.ts  purge.html  purge.ts  read.html  read.ts  settings.html  settings.ts  settingswindow.html  settingswindow.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: about.json  compile.json  main.json  purge.json  read.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/resources/: themes.json
src-tauri/resources/locales/en/about/: messages.json  messages.po
src-tauri/resources/locales/en/main/: messages.json  messages.po
src-tauri/resources/locales/en/settings/: messages.json  messages.po
src-tauri/resources/locales/ru/about/: messages.json  messages.po
src-tauri/resources/locales/ru/main/: messages.json  messages.po
src-tauri/resources/locales/ru/settings/: messages.json  messages.po
src-tauri/src/: commands.rs  functions.rs  main.rs  read.rs  statics.rs  types.rs  write.rs
src/assets/: style.css  theme-styles.css
src/extensions/: array-extensions.ts  functions.ts  htmlelement-extensions.ts  invokes.ts  localization.ts
src/lib/: global.d.ts
src/lib/classes/: ProjectSettings.ts  Replacer.ts  Saver.ts  Searcher.ts  Settings.ts  emittery.ts  index.ts
src/lib/enums/: AppEvent.ts  BaseFlags.ts  BatchAction.ts  DuplicateMode.ts  EngineType.ts  FileFlags.ts  JumpDirection.ts  Language.ts  MatchMode.ts  MatchType.ts  MouseButton.ts  ProgressDirection.ts  RPGMFileType.ts  ReadMode.ts  RowDeleteMode.ts  SearchAction.ts  SearchFlags.ts  SearchMode.ts  TextAreaStatus.ts  TokenizerAlgorithm.ts  TranslationEndpoint.ts  WindowType.ts  index.ts
src/tests/: BatchMenu.test.ts  Replacer.test.ts  Saver.test.ts  Searcher.test.ts
src/types/: batchwindow.ts  classes.ts  enums.ts  global.d.ts  projectsettings.ts  replacer.ts  saver.ts  searcher.ts  searchmenu.ts  searchpanel.ts  settings.ts  tabcontentheader.ts
src/utilities/: constants.ts  extensions.ts  functions.ts  htmlelement-extensions.ts  invokes.ts  localization.ts  string-extensions.ts
src/utils/: constants.ts  functions.ts  invokes.ts  localization.ts
src/windows/about/: AboutWindow.html  AboutWindow.ts  html.ts
src/windows/main/: MainWindow.html  MainWindow.ts  html.ts
src/windows/main/components/: BatchMenu.ts  BookmarkMenu.ts  Component.ts  FileMenu.ts  GlossaryMenu.ts  GoToRowInput.ts  HelpMenu.ts  LanguageMenu.ts  LeftPanel.ts  MatchMenu.ts  MenuBar.ts  PurgeMenu.ts  ReadMenu.ts  Replacer.ts  Saver.ts  ScrollBar.ts  SearchMenu.ts  SearchPanel.ts  Searcher.ts  TabContent.ts  TabContentHeader.ts  TabPanel.ts  ThemeEditMenu.ts  ThemeMenu.ts  UtilsPanel.ts  WriteMenu.ts  index.ts
src/windows/main/components/BatchMenu/: BatchMenu.ts  internal.ts
src/windows/settings/: SettingsWindow.html  SettingsWindow.ts  html.ts
text-editing/: index.html
