[package]
name = "rpgmtranslate"
version = "6.0.0"
description = "A graphical interface that allows you to open RPG Maker games' text and edit it, then writing it back to the initial form."
authors = ["savannstm <savannstm@gmail.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.2", features = ["protocol-asset", "devtools"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
regex = "1.11.1"
indexmap = "2.11.0"
flate2 = "1.1.2"
encoding_rs = "0.8.35"
translators = { version = "0.1.5", features = ["all"] }
log = "0.4.27"
tokio = "1.47.1"
walkdir = "2.5.0"
thiserror = "2.0.16"
marshal-rs = "1.1.1"
rpgmad-lib = { version = "3.0.0", features = ["serde"] }
rvpacker-lib = { package = "rvpacker-txt-rs-lib", version = "9.0.3" }
tauri-plugin-process = "2.3.0"
tauri-plugin-fs = "2.4.2"
tauri-plugin-os = "2.3.1"
tauri-plugin-dialog = "2.3.3"
tauri-plugin-shell = "2.3.0"
tauri-plugin-persisted-scope = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-log = "2.6.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.3"
tauri-plugin-updater = "2.9.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
