[package]
name = "rpgmtranslate"
version = "6.0.1"
description = "A graphical interface that allows you to open RPG Maker games' text and edit it, then writing it back to the initial form."
authors = ["savannstm <savannstm@gmail.com>"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.4", features = ["protocol-asset", "devtools"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
regex = "1.12.2"
indexmap = "2.12.1"
flate2 = "1.1.5"
encoding_rs = "0.8.35"
translators = { version = "0.1.5", features = ["all"] }
log = "0.4.29"
tokio = "1.48.0"
walkdir = "2.5.0"
thiserror = "2.0.17"
marshal-rs = "2.0.0"
rpgmad-lib = { version = "4.0.0", features = ["serde"] }
rvpacker-lib = { package = "rvpacker-txt-rs-lib", version = "10.0.0" }
tauri-plugin-process = "2.3.1"
tauri-plugin-fs = "2.4.4"
tauri-plugin-os = "2.3.2"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-shell = "2.3.3"
tauri-plugin-persisted-scope = "2.3.4"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-log = "2.7.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-updater = "2.9.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
