[package]
name = "rpgmtranslate"
version = "8.0.0"
description = "A graphical interface that allows you to open RPG Maker games' text and edit it, then writing it back to the initial form."
authors = ["savannstm <savannstm@gmail.com>"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
deepl = "0.7.3"
encoding_rs = "0.8.35"
flate2 = "1.1.5"
gemini-rust = "1.6.1"
indexmap = "2.12.1"
language-tokenizer = { version = "0.1.0", features = ["snowball", "serde"], path = "../../language-tokenizer" }
llm-connector = "0.5.13"
log = "0.4.29"
marshal-rs = "2.0.0"
num_enum = "0.7.5"
regex = "1.12.2"
rpgmad-lib = { version = "4.0.0", features = ["serde"] }
rvpacker-lib = { package = "rvpacker-txt-rs-lib", version = "11.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
tauri = { version = "2.9.5", features = ["protocol-asset", "devtools"] }
tauri-plugin-process = "2.3.1"
tauri-plugin-fs = "2.4.4"
tauri-plugin-os = "2.3.2"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-shell = "2.3.3"
tauri-plugin-persisted-scope = "2.3.4"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-log = "2.7.1"
thiserror = "2.0.17"
tokio = "1.49.0"
tiktoken-rs = "0.9.1"
translators = { version = "0.1.5", features = ["all"] }
walkdir = "2.5.0"
whatlang = "0.18.0"
yandex-translate = { version = "0.1.0", path = "../../yandex-translate" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-updater = "2.9.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
